--- a/community-platform/.env.local.example
+++ b/community-platform/.env.local.example
@@ -5,3 +5,15 @@ SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 
 # App Configuration
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Anthropic API (for AI features)
+ANTHROPIC_API_KEY=your-anthropic-api-key
+
+# Twilio (for WhatsApp integration - optional)
+TWILIO_ACCOUNT_SID=your-twilio-account-sid
+TWILIO_AUTH_TOKEN=your-twilio-auth-token
+TWILIO_WHATSAPP_NUMBER=+1234567890
+
+# Slack Integration (optional)
+SLACK_BOT_TOKEN=xoxb-your-slack-bot-token
+SLACK_SIGNING_SECRET=your-slack-signing-secret
