--- a/community-platform/package.json
+++ b/community-platform/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,6 +11,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
     "@supabase/ssr": "^0.1.0",
+    "qrcode": "^1.5.3",
+    "html5-qrcode": "^2.3.8",
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,6 +20,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.17",
